tests/algorithmIV-app.css
/* Algorithm IV App (v1.1.0) (learn@algorithmiv.com)
 * Section: CSS Style Guide
 * Author: Adam Smith (adamsmith@youlum.com)
 * Copyright (c) 2015 Adam A Smith (github.com/imaginate)
 * The MIT License (algorithmiv.com/docs/license) */

/* ------------------------------- *
 * New Section:
 * ------------------------------- *
 * Import Fonts
 * ------------------------------- */
@import url(http://fonts.googleapis.com/css?family=Source+Code+Pro:500,600);
@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,700);

/* ------------------------------- *
 * New Section:
 * ------------------------------- *
 * Body & Header Tags
 * ------------------------------- */

body {
  padding:0 0 30px;
  color:#000;
/*  font-family:"ff-tisa-sans-web-pro", "Open Sans", sans-serif; */
  font-family:"Open Sans", sans-serif;
  font-size:0;
  background:#fff;
}

h1 {
  display:block;
  padding:0;
  margin:30px auto 10px;
  text-align:center;
  color:#000821;
  font-size:30px;
}

/* ------------------------------- *
 * New Section:
 * ------------------------------- *
 * Algorithm IV Container
 * ------------------------------- */

#aIV {
  display:block;
  width:90%;
  padding:0;
  margin:0 auto;
  text-align:center;
  font-size:0;
  -webkit-user-select:none;
  -moz-user-select:none;
  -ms-user-select:none;
}
#aIV ::-moz-selection { background:#fff }
#aIV ::selection { background:#fff }
@media only screen and (min-width:1200px) {
  #aIV { width:1066px; }
}

/* ------------------------------- *
 * New Section:
 * ------------------------------- *
 * Search Bar
 * ------------------------------- */

#aIV .selections {
  display:block;
  padding:0;
  margin:0 auto 30px;
  text-align:center;
  font-size:0;
}

#aIV .selections select {
  display:inline-block;
  padding:1px 0 1px 1px;
  margin:5px 5px;
  color:#192037;
/*  font-family:"ff-tisa-sans-web-pro", "Open Sans", sans-serif; */
  font-family:"Open Sans", sans-serif;
  font-size:15px;
  font-weight:700;
  outline:0;
  border:1px solid #33394d;
  cursor:pointer;
  -webkit-transition:width 1s;
  -moz-transition:width 1s;
  -o-transition:width 1s;
  transition:width 1s;
}

#aIV .selections select:hover,
#aIV .selections select:active {
  color:#000821;
  border:1px solid #000821;
}

#aIV select option:hover,
#aIV select option:active {
  background:#d8f0fa;
}

/* ------------------------------- *
 * New Section:
 * ------------------------------- *
 * Main Container
 * ------------------------------- */

#aIV-main {
  position:relative;
  display:block;
  width:100%;
  font-size:0;
  opacity:1;
  -webkit-transition:opacity 500ms;
  -moz-transition:opacity 500ms;
  -o-transition:opacity 500ms;
  transition:opacity 500ms;
}

/* ------------------------------- *
 * New Section:
 * ------------------------------- *
 * Question Navigation
 * ------------------------------- */

#aIV .main nav {
  position:relative;
  top:auto;
  left:auto;
  display:none;
  height:78px;
  padding:0;
  margin:20px 0 0;
  font-size:0;
}

#aIV .prev,
#aIV .next {
  position:absolute;
  top:0;
  display:block;
  width:100px;
  height:75px;
  font-size:0;
  cursor:pointer;
}
#aIV .prev {  left:0; }
#aIV .next { right:0; }

#aIV nav .arrow {
  position:absolute;
  top:25px;
  left:0;
  z-index:210;
  display:block;
  width:100%;
  height:50px;
  opacity:0.8;
  -webkit-transition:opacity 1s;
  -moz-transition:opacity 1s;
  -o-transition:opacity 1s;
  transition:opacity 1s;
}
#aIV .prev .arrow { background:url(images/prev-small.png) no-repeat center center; }
#aIV .next .arrow { background:url(images/next-small.png) no-repeat center center; }

#aIV nav .bg {
  position:absolute;
  top:25px;
  left:0;
  z-index:205;
  display:block;
  width:100%;
  height:50px;
  background:#d8f0fa;
  -webkit-transition:background 1s;
  -moz-transition:background 1s;
  -o-transition:background 1s;
  transition:background 1s;
}

#aIV nav .title {
  position:absolute;
  top:0;
  left:0;
  z-index:200;
  display:block;
  width:100%;
  height:20px;
  line-height:20px;
  text-align:center;
  color:#000821;
  font-size:18px;
  font-weight:700;
  opacity:0;
  -webkit-transition:opacity 1s;
  -moz-transition:opacity 1s;
  -o-transition:opacity 1s;
  transition:opacity 1s;
}

#aIV .prev .arrow:hover,
#aIV .prev .arrow:active,
#aIV .next .arrow:hover,
#aIV .next .arrow:active {
  opacity:0.9;
}

#aIV .prev .arrow:hover ~ .bg,
#aIV .prev .arrow:active ~ .bg,
#aIV .next .arrow:hover ~ .bg,
#aIV .next .arrow:active ~ .bg {
  background:#ebf7fc;
}

#aIV .prev .arrow:hover ~ .title,
#aIV .prev .arrow:active ~ .title,
#aIV .next .arrow:hover ~ .title,
#aIV .next .arrow:active ~ .title {
  opacity:0.8;
}

@media only screen and (min-width:1200px) {

  #aIV .main nav {
    position:absolute;
    top:14px;
    left:0;
    width:100%;
    height:85px;
    margin:0;
  }

  #aIV .prev,
  #aIV .next {
    width:80px;
    height:90px;
  }

  #aIV nav .arrow {
    top:0;
    height:65px;
  }
  #aIV .prev .arrow { background:url(images/prev.png) no-repeat center center; }
  #aIV .next .arrow { background:url(images/next.png) no-repeat center center; }

  #aIV nav .bg {
    top:0;
    height:65px;
  }

  #aIV nav .title {
    top:70px;
  }
}

/* ------------------------------- *
 * New Section:
 * ------------------------------- *
 * All Questions Container
 * ------------------------------- */

#aIV-questions {
  display:block;
  width:100%;
  padding:0;
  margin:0 auto;
  font-size:0;
  opacity:1;
  -webkit-transition:opacity 500ms;
  -moz-transition:opacity 500ms;
  -o-transition:opacity 500ms;
  transition:opacity 500ms;
}
@media only screen and (min-width:1200px) {
  #aIV-questions { width:calc(100% - 170px) }
}
/* ... */

